# mykey-proxy

./: .gitignore  ARCHITECTURE.md  PROJECT_STATUS.md  README.md  TO-DO.MD
daemon/: Cargo.toml
daemon/src/: dbus_interface.rs  main.rs  pam.rs  prereqs.rs  replay.rs  session.rs  tpm.rs  validator.rs
docs/: README.md  architecture.md  threat-model.md
docs/commands/: mykey-auth.md  mykey-migrate.md  mykey-security-key.md  mykey.md
docs/components/: auth.md  daemon.md  secrets.md  tray.md
docs/packaging/: arch.md
extension/: manifest.json
extension/src/: background.js  crypto.js
mykey/: Cargo.toml
mykey-auth/mykey-biometrics/: README.md
mykey-auth/mykey-pam/: Cargo.toml
mykey-auth/mykey-pam/src/: biometrics.rs  daemon_client.rs  elevated_daemon_client.rs  lib.rs  pam_integration.rs  password_verifier.rs  runtime_daemon_client.rs  security_keys.rs
mykey-auth/mykey-security-key/: Cargo.toml  README.md
mykey-auth/mykey-security-key/src/: auth_client.rs  daemon_client.rs  main.rs
mykey-daemon/src/: auth_backoff.rs  authentication.rs  credentials.rs  crypto.rs  crypto_ops.rs  dbus_interface.rs  elevated_auth.rs  local_auth_policy.rs  main.rs  pam.rs  password_fallback.rs  pin_store.rs  prereqs.rs  protocol.rs  registration.rs  replay.rs  session.rs  tpm.rs  validator.rs
mykey-migrate/src/: daemon_client.rs  main.rs  paths.rs  (+2 more)
mykey-tray/: Cargo.toml
scripts/: install.sh  mykey-daemon.service  mykey-elevated-auth.pam  mykey-security-key-auth.pam  mykey-tray.service  uninstall.sh  webauthn-proxy-daemon.service  webauthn-proxy-tray.service
systray/: Cargo.toml
(+27 files in other folders)
