[package]
name = "mykey-security-key"
version = "0.1.0"
edition = "2021"
description = "MyKey security-key enrollment and management tool"
license = "MIT"

[[bin]]
name = "mykey-security-key"
path = "src/main.rs"

[[bin]]
name = "mykey-security-key-auth"
path = "src/bin/mykey-security-key-auth.rs"

[dependencies]
pam = { version = "0.8", features = ["client"] }
zbus = { version = "4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = true, features = ["clock", "serde"] }
zeroize = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
rpassword = "7"
sha2 = "0.10"
